--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/gestion_proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar=..\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=gestion_proyecto.Gestion_proyecto
+main.class=controllers.NewMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
