--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /build/
+librerias Usadas/jcalendar-1.4.jar
+librerias_usadas/jcalendar-1.4.jar
+librerias Usadas/proyecto_gestion_DER.pdf
+librerias_usadas/proyecto_gestion_DER.pdf
+
+
