--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0_6.jar=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=..\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mariadb-java-client-2.3.0_6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
