--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 nbproject/private/private.properties
 build/classes/controllers/NewMain.class
 build/classes/controllers/conexion.class
+src/controllers/Conexion.java
