--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ nbproject/private/private.properties
 build/classes/controllers/NewMain.class
 build/classes/controllers/conexion.class
 src/controllers/Conexion.java
+build/classes/controllers/NewMain.class
+build/classes/controllers/miembroData.class
