--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ build/classes/controllers/conexion.class
 src/controllers/Conexion.java
 build/classes/controllers/NewMain.class
 build/classes/controllers/miembroData.class
+/dist/
