--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/controllers/Conexion.java
 build/classes/controllers/NewMain.class
 build/classes/controllers/miembroData.class
 /dist/
+src/todo.txt
