verificacion de ProyectoData

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ build/classes/controllers/NewMain.class
 build/classes/controllers/miembroData.class
 /dist/
 src/todo.txt
+build/classes/controllers/conexion.class
+build/classes/controllers/NewMain.class
