--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ build/classes/controllers/miembroData.class
 src/todo.txt
 build/classes/controllers/conexion.class
 build/classes/controllers/NewMain.class
+build/classes/controllers/conexion.class
+build/classes/controllers/NewMain.class
