--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ build/classes/controllers/conexion.class
 build/classes/controllers/NewMain.class
 build/classes/controllers/conexion.class
 build/classes/controllers/NewMain.class
+nbproject/private/private.xml
