correciones menores en equipoMiembroData

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ build/classes/controllers/NewMain.class
 build/classes/controllers/conexion.class
 build/classes/controllers/NewMain.class
 nbproject/private/private.xml
+nbproject/private/config.properties
+build/classes/controllers/NewMain.class
