--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=librerias Usadas\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0_6.jar=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
+file.reference.mariadb-java-client-2.3.0_6.jar-1=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\mariadb-java-client-2.3.0_6.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=..\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mariadb-java-client-2.3.0_6.jar}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-1}
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
+    ${file.reference.mariadb-java-client-2.3.0_6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,7 +67,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=controllers.NewMain
+main.class=views.Gestion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
