--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,10 @@ dist.jar=${dist.dir}/gestion_proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=librerias Usadas\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0_6.jar=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
 file.reference.mariadb-java-client-2.3.0_6.jar-1=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\mariadb-java-client-2.3.0_6.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=..\\mysql-connector-java-5.1.46-bin.jar
@@ -42,7 +44,9 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mariadb-java-client-2.3.0_6.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
-    ${file.reference.mariadb-java-client-2.3.0_6.jar-1}
+    ${file.reference.mariadb-java-client-2.3.0_6.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
