--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ build/classes/controllers/NewMain.class
 nbproject/private/private.xml
 nbproject/private/config.properties
 build/classes/controllers/NewMain.class
+build/classes/controllers/conexion.class
+src/controllers/Conexion.java
