--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
 /build/
-nbproject/private/private.properties
-build/classes/controllers/NewMain.class
-build/classes/controllers/conexion.class
 src/controllers/Conexion.java
-build/classes/controllers/NewMain.class
-build/classes/controllers/miembroData.class
-/dist/
-src/todo.txt
-build/classes/controllers/conexion.class
-build/classes/controllers/NewMain.class
-build/classes/controllers/conexion.class
-build/classes/controllers/NewMain.class
-nbproject/private/private.xml
-nbproject/private/config.properties
-build/classes/controllers/NewMain.class
-build/classes/controllers/conexion.class
-src/controllers/Conexion.java
-src/controllers/Conexion.java
-build/classes/controllers/conexion.class
+dist/lib/mysql-connector-java-5.1.23-bin.jar
+*.jar
+dist/README.TXT
