--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ dist/lib/mysql-connector-java-5.1.23-bin.jar
 dist/README.TXT
 nbproject/private/private.xml
 src/controllers/Conexion.java
+src/views/Gestion1.form
+src/views/Gestion1.form
+src/views/Gestion1.java
