--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-/build/
+build/
 src/controllers/Conexion.java
 dist/lib/mysql-connector-java-5.1.23-bin.jar
 *.jar
 dist/README.TXT
 nbproject/private/private.xml
-src/controllers/Conexion.java
-src/views/Gestion1.form
-src/views/Gestion1.form
 src/views/Gestion1.java
+src/controllers/Conexion.java
 build/classes/controllers/conexion.class
 src/controllers/Conexion.java
