--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@ build/
 src/controllers/Conexion.java
 dist/lib/mysql-connector-java-5.1.23-bin.jar
 *.jar
+*.class
 dist/README.TXT
 nbproject/private/private.xml
 src/views/Gestion1.java
-src/controllers/Conexion.java
-build/classes/controllers/conexion.class
 src/controllers/Conexion.java
