--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Ruben\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\Lab 1\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=librerias Usadas\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mariadb-java-client-2.3.0.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
     ${file.reference.mariadb-java-client-2.3.0_6.jar-2}:\
-    ${file.reference.jcalendar-1.4.jar-2}
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
