--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,31 @@ dist.jar=${dist.dir}/gestion_proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Ruben\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\Lab 1\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=librerias Usadas\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0_6.jar=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
+file.reference.mariadb-java-client-2.3.0_6.jar-1=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\mariadb-java-client-2.3.0_6.jar
+file.reference.mariadb-java-client-2.3.0_6.jar-2=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=..\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mariadb-java-client-2.3.0_6.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
+    ${file.reference.mariadb-java-client-2.3.0_6.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
+    ${file.reference.mariadb-java-client-2.3.0_6.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +77,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=controllers.NewMain
+main.class=views.Gestion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
