--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.jcalendar-1.4.jar=..\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Ruben\\Desktop\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\Lab 1\\jcalendar-1.4.jar
+file.reference.JTattoo-1.6.9.jar=C:\\Users\\User\\Documents\\JTattoo-1.6.9.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=librerias Usadas\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mariadb-java-client-2.3.0.jar
@@ -54,7 +55,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.JTattoo-1.6.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
