--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,31 +32,24 @@ file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Ruben\\Desktop\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\Lab 1\\jcalendar-1.4.jar
 file.reference.JTattoo-1.6.9.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\JTattoo-1.6.9.jar
+file.reference.JTattoo-1.6.9.jar-1=..\\JTattoo-1.6.9.jar
 file.reference.mariadb-java-client-2.3.0.jar=..\\mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0.jar-1=librerias Usadas\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0_6.jar=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
 file.reference.mariadb-java-client-2.3.0_6.jar-1=C:\\Users\\rober\\OneDrive\\Desktop\\Ulp\\mariadb-java-client-2.3.0_6.jar
 file.reference.mariadb-java-client-2.3.0_6.jar-2=C:\\Users\\Ruben\\Desktop\\mariadb-java-client-2.3.0_6.jar
-file.reference.mysql-connector-java-5.1.46-bin.jar=..\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mariadb-java-client-2.3.0_6.jar}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
     ${file.reference.mariadb-java-client-2.3.0_6.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
     ${file.reference.mariadb-java-client-2.3.0_6.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
-    ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}:\
-    ${file.reference.JTattoo-1.6.9.jar}
+    ${file.reference.JTattoo-1.6.9.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.JTattoo-1.6.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,7 +74,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=views.Gestion
+main.class=views.IniciarPrograma
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
