--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ dist/README.TXT
 nbproject/private/private.xml
 src/views/Gestion1.java
 build/classes/views/ProyectoView$3.class
+src/controllers/Conexion.java
