mas errrores corregidos
tocamso algo y rompeos otra cosa

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/views/Gestion1.java
 build/classes/views/ProyectoView$3.class
 src/controllers/Conexion.java
 build/classes/views/ProyectoView.form
+/dist/
