--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ build/classes/views/ProyectoView$3.class
 src/controllers/Conexion.java
 build/classes/views/ProyectoView.form
 /dist/
+nbproject/private/private.xml
